--- a/MatrixLib/CMakeLists.txt
+++ b/MatrixLib/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required (VERSION 3.1)
 
 set(SRC 
- "include/matlib/matrix_1d.h"
- "src/matrix_1d.cpp"
+ "include/matlib/vector_1d.h"
+ "src/vector_1d.cpp"
+ "include/matlib/matrix_3d.h"
+ "src/matrix_3d.cpp"
 )
 
 add_library(MatrixLib STATIC ${SRC})
