--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
 # dependencies
 # Google Test Library
 set(gtest_force_shared_crt ON CACHE BOOL "gtest_force_shared_crt" FORCE)
-add_subdirectory("deps/googletest")
+add_subdirectory("External/googletest")
 
 # projects
 add_subdirectory(MatrixLib)
